syntax = "proto3";

package counter.v1;

option go_package="github.com/asynccnu/ccnubox-be/be-api/gen/proto/counter/v1;counterv1";
//import "google/protobuf/any.proto";

service CounterService {
  rpc AddCounter(AddCounterReq)returns(AddCounterResp);//为指定用户增加次数,如果不存在该用户会自动创建
  rpc GetCounterLevels(GetCounterLevelsReq)returns(GetCounterLevelsResp);//批量返回级别,直接返回级别减少运算
  rpc ChangeCounterLevels(ChangeCounterLevelsReq)returns(ChangeCounterLevelsResp);//批量调整级别,根据逻辑可以选择上升或者下降
  rpc ClearCounterLevels(ClearCounterLevelsReq)returns(ClearCounterLevelsResp);
}

message AddCounterReq{
  string studentId=1;//发送一个studentId增加一次,根据具体的次数划分等级
}

message AddCounterResp{
}

message GetCounterLevelsReq{
  string label=1;
}

message GetCounterLevelsResp{
  repeated string studentIds=1;
}


message ChangeCounterLevelsReq{
  repeated string studentIds =1;
  bool isReduce=2;//如果是ture表示降低等级，1,3,7表示其等级
  int64 step =3;//表示降低几个等级,
}

message ChangeCounterLevelsResp{}

message ClearCounterLevelsReq{}
message ClearCounterLevelsResp{}

